* Add support for Apple Mac OS support in our systems.
* Add initial support for torrent casting.  Only works for resizable.
* Adjust bootmenu to store to variables.  This can then allow hooks to
interact with the boot menu setup for customizations as needed.
* Adjust the menu items to go into database to allow adding own custom
options that stay even if updated.

Version 1.2.0
-------------
* Fix GUI not loading if no nodes are in storage group.
* Fix FOGPageManager loading plugin class files properly.
* Fix foglang variable to be loaded before init so entire FOG system has
access to them.
* Fix multicast tasks to close through FOGMulticastManager rather than
Post_Stage3.php
* Fix configureNFS line to only update exports if it's not an update.
* Fix installer/upgrader to use values stored in .fogsettings if set.
Post_Stage3.php
* Fix client page so you don't have to be logged in to view it.
* Fix hwinfo and client node= links to operate properly.
* Fix installer to check for msyql-galera-server as is used for mysql-server
in CentOS 7.0
* Fix donate tasking completetion elements so systems reboot/shutdown as
needed when the time is met.
* Fix 100% usage of the disk in resizable images.  Percentages should not be
used and should never have been used to getin with.  It now uses the -1s
method to specify to the end of the disk.
* Add ftp file size checking.  All sizes are done through ftp now.
* Add size of byte filtering to get pretty size.
* Add $this->FOGUser to FOGPageManager and Hook to check if its set. This is
needed because FOGBase is loaded before FOGUser is actually established.
* Add postdownloadscripts to allow custom init scripts to be run after imaged.
* Add Windows 8/8.1 ability to image with resizable. BCD works with them too.
* Add SnapinJob to Host class.
* Add libtorrent and rtorrent to inits.
* Add beginning stages to allow split file images.
* Add hostname to kernel args as default.  Use hostearly variable sent if